# tl-challenge

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  todo.md  tox.ini
.github/workflows/: ci.yml
tests/: conftest.py  test_basic_info.py  test_basic_info_translated.py
tests/files/: diglett.json  mewtwo.json
tl_challenge/: app.py  models.py
